13-nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: production
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
  - name: nginx-port
    port: 80
    targetPort: 80
