22-phpfpm-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: phpfpm
  namespace: production
spec:
  selector:
    app: phpfpm
  type: ClusterIP
  ports:
  - name: phpfpm-port
    port: 9000
    targetPort: 9000
