92-ingress-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
  namespace: production
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: http
