91-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: production
spec:
 rules:
 - host: test.info
   http:
     paths:
     - path: /
       backend:
         serviceName: nginx
         servicePort: 80
